Some changes in project

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+         <head>
 	<script src="./app.js"></script>
         <link rel="stylesheet" href="app.css">
     </head>
