--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head> zmena"""::
          <head>
 	<script src="./app.js"></script>
         <link rel="stylesheet" href="app.css">
